# cli

./: .dentest.yml  .entest.yml  Cargo.toml
.github/workflows/: release.yaml
src/: client.rs  config.rs  entities.rs  error.rs  main.rs  pull.rs
src/entities/: feature_list_item.rs
src/utils/: json.rs
