[package]
name = "entest"
version = "0.1.0"
authors = ["Pierre Rolland <roll.pierre@gmail.com>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
dotenv = "0.15.0"
reqwest = { version = "0.10.10", features = ["blocking", "json", "serde_json"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.59"
termion = "*"
yaml-rust = "0.4"
